--- a/marketplace/templates/marketplace/cart-page.html
+++ b/marketplace/templates/marketplace/cart-page.html
@@ -1,6 +1,6 @@
 {% extends '_shared/_base.html' %}
 {% load thumbnail %}
-
+{% load custom_filters %}
 {% block title %}
 	Cart
 {% endblock %}
@@ -48,7 +48,7 @@
 														</div>
 														<div class="text-holder">
 															<h6>{{ cart.fooditem.food_name }}</h6>
-															<span>{{ cart.fooditem.description }}</span>
+															<span>{{ cart.fooditem.description | half }}</span>
 															<a href="{% url 'detail-marketplace' cart.fooditem.vendor.vendor_slug %}" class="badge badge-warning">{{ cart.fooditem.vendor }}</a>
 														</div>
 														<div class="price-holder">
