--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends '_shared/_base.html' %}
 {% load static %}
 {% load thumbnail %}
+{% load custom_filters %}
 {% block title %}
 	Home
 {% endblock %}
@@ -9,7 +10,7 @@
 	<div class="main-section">
 			<!-- Home Pages Elements Strat -->
 			<!-- Main Search Start -->
-			<div class="page-section nopadding cs-nomargin" style="padding-top: 200px; padding-bottom: 150px; margin-bottom: 0px; background: url({% static 'extra-images/bg-image1.jpg' %}) no-repeat center / cover;">
+			<div class="page-section nopadding cs-nomargin main-search-bar" style="padding-top: 200px; padding-bottom: 150px; margin-bottom: 0px; background: url({% static 'extra-images/bg-image1.jpg' %}) no-repeat center / cover;">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
@@ -82,12 +83,12 @@
 											{% if vendor.user_profile.profile_picture %}
 												<a href="{% url 'detail-marketplace' slug=vendor.vendor_slug %}">
 												{% thumbnail vendor.user_profile.profile_picture "175x165" crop='center' quality=90 as im %}
-                                                    <img class="thumbnail attachment-full size-full wp-post-image" src="{{ im.url }}" alt="">
+                                                    <img class="thumbnail attachment-full size-full wp-post-image" src="{{ im.url }}" height="120" alt="">
                                                 {% endthumbnail %}
 												</a>
 											{% else %}
 												<a href="{% url 'detail-marketplace' slug=vendor.vendor_slug %}">
-                                                    <img class="thumbnail attachment-full size-full wp-post-image" src="{% static 'extra-images/profile-picture-1.PNG' %}" alt="">
+                                                    <img class="thumbnail attachment-full size-full wp-post-image" src="{% static 'extra-images/profile-picture-1.PNG' %}" height="120" alt="">
 												</a>
 											{% endif %}
 
@@ -143,10 +144,15 @@
 											</div>
 											<div class="text-holder">
 												<div class="list-rating">
-													<div class="rating-star">
-														<span class="rating-box" style="width: 100%;"></span>
+													<div class="rating-box">
+														{% for i in vendor.rating|timesrange %}
+														    {% if forloop.counter <= vendor.rating %}
+														        <i class="bi bi-star-fill"></i>
+														    {% else %}
+															    <i class="bi bi-star"></i>
+														    {% endif %}
+														{% endfor %}
 													</div>
-													<span class="reviews">(1)</span>
 												</div>
 												<div class="post-title">
 													<h5>
